--- a/sass/2-layouts/_bio.sass
+++ b/sass/2-layouts/_bio.sass
@@ -23,17 +23,58 @@
 			overflow: hidden
 
 	.social-wrap
-		position: relative
-		margin-top: 10px
-	.social-wrap div
-		position: absolute
-		left: 46%
+		width: 150px
+		display: block
+		margin: 10px auto 0
 		a
 			margin: 0 10px
 			opacity: .6
 			transition: all 0.25s
 			&:hover
 				opacity: 1
+	.resume
+		width: 153px
+		color: black
+		position: relative
+		margin: 40px auto 0
+
+		.download
+			position: relative
+			display: inline-block
+			width: 100%
+			height: 32px
+			border-radius: 5px
+			background: white
+			color: $primary
+			font-family: $caveat-brush
+			font-size: 0.8rem
+			letter-spacing: 0.05rem
+			transition: all 0.25s 
+			&:hover
+				box-shadow: 1px 1px 11px 1px rgba(0, 0, 0, 0.10)
+			&:before 
+				content: ""
+				width: 50px
+				height: 32px
+				display: inline-block
+				background-color: #CC9AB5
+				border-radius: 5px 0 0 5px
+				transition: all 0.25s 
+			&:hover:before
+				background-color: #e29ec3
+
+			span
+				position: absolute
+				display: inline-block
+				top: 8px
+				right: 5px
+
+		img 
+			position: absolute
+			top: 6px
+			left: 16px
+		
+
 
 	p
 		font-family: $varela
