social meida hrefs, Dl btn, new work update

--- a/sass/2-layouts/_bio.sass
+++ b/sass/2-layouts/_bio.sass
@@ -32,12 +32,14 @@
 			transition: all 0.25s
 			&:hover
 				opacity: 1
+
 	.resume
 		width: 153px
 		color: black
 		position: relative
 		margin: 40px auto 0
-
+		// a
+		// 	opacity: 1
 		.download
 			position: relative
 			display: inline-block
@@ -72,7 +74,7 @@
 		img 
 			position: absolute
 			top: 6px
-			left: 16px
+			left: 25px
 		
 
 
